syntax = "proto3";
package player;

message PlayerState {
    string track_id = 1;
    string hub_id = 2;
    uint32 gain = 3;
}
